Fix issue with rendering when tabbing through MSRPOPL, wrap EV section with span

--- a/app/assets/stylesheets/builder.less
+++ b/app/assets/stylesheets/builder.less
@@ -111,7 +111,9 @@
         margin-top: 0;
         padding-top: 6px;
       }
-
+      .span-expected-values {
+        word-wrap: break-word;
+      }
       .form-inline {
         .form-group {
           padding-right: 10px;
